[package]
name = "alectro"
version = "0.0.1"
description = "A textual IRC client."
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "GPL-3.0"
keywords = ["irc", "client", "tui", "termion"]
categories = ["command-line-interface", "command-line-utilities"]
documentation = "https://docs.rs/alectro/"
repository = "https://github.com/aatxe/alectro"
readme = "README.md"

[dependencies]
futures = "0.1"
irc = "0.12.0"
termion = "1.4.0"
tokio-core = "0.1"
tokio-timer = "0.1"
